<resources>
    <string name="app_name">EasyTravel</string>
    <string name="navigation_drawer_open">Apri menù</string>
    <string name="navigation_drawer_close">Chiudi menù</string>
    <string name="action_settings">Impostazioni</string>
    <string name="passaggi">EasyTravel</string>
    <string name="by_giorgio_bertolotti">by Giorgio Bertolotti</string>
    <string name="effettua_il_login_o_registrati">Effettua il login o registrati!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="nomecognome">Nome Cognome</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="conferma">Conferma</string>
    <string name="email">E-mail</string>
    <string name="registrati">REGISTRATI</string>
    <string name="please_wait">Attendi che un autista ti contatti</string>
    <string name="google_api_key">AIzaSyCffbNuWyROpx1zpavp0hSgWSBwsu7m_6M</string>
    <string name="name">Name</string>
    <string name="type_id">Type_id</string>
    <string name="immagine_profilo_utente">immagine profilo utente</string>
    <string name="google_sign_in">GOOGLE SIGN IN</string>
    <string name="range">Range</string>
    <string name="salva">SALVA</string>
    <string name="resta_loggato">Resta loggato</string>
    <string name="hai_dimenticato_la_password">Hai dimenticato la password?</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="ip_server">IP Server:</string>
    <string name="_0000">0000</string>
    <string name="loginregister">Crea account</string>
    <string name="advsettings">Impostazioni avanzate</string>
    <string name="AdvisorWait">NB: Ricorda di annullare la ricerca una volta che avrai concordato un passaggio con un autista.</string>
    <string name="latitudine">LATITUDINE</string>
    <string name="longitudine">LONGITUDINE</string>
    <string name="destinazione">DESTINAZIONE</string>
    <string name="hai_scelto_questa_destinazione">Hai scelto questa destinazione:</string>
</resources>
