<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.giorgio.provamenu.Login_Fragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:id="@+id/lgntvmobile"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lgnetmobile"
        android:layout_below="@+id/lgntvmobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="phone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/lgntvpassword"
        android:layout_below="@+id/lgnetmobile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lgnetpassword"
        android:layout_below="@+id/lgntvpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/lgnbtnlogin"
        android:layout_below="@+id/lgnetpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClickLogin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resta_loggato"
        android:id="@+id/lgnchkrestaloggato"
        android:layout_below="@+id/lgnetpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />
</RelativeLayout>
