<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context="com.easytravel.app.LoginActivity"
    android:background="@drawable/backgroundlogin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/lgnbtnlogin"
            android:onClick="onClickLogin"
            android:layout_above="@+id/lgntvforgot"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lgnetpassword"
            android:inputType="textPassword"
            android:layout_above="@+id/lgnchkrestaloggato"
            android:layout_marginBottom="13dp"
            android:layout_alignLeft="@+id/lgnchkrestaloggato"
            android:layout_alignStart="@+id/lgnchkrestaloggato"
            android:layout_alignRight="@+id/lgntvforgot"
            android:layout_alignEnd="@+id/lgntvforgot"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/lgntvpassword"
            android:layout_above="@+id/lgnetpassword"
            android:layout_alignLeft="@+id/lgnetpassword"
            android:layout_alignStart="@+id/lgnetpassword"
            android:textColor="@color/colorWhite" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lgnetmobile"
            android:inputType="phone"
            android:layout_above="@+id/lgntvpassword"
            android:layout_alignLeft="@+id/lgntvpassword"
            android:layout_alignStart="@+id/lgntvpassword"
            android:layout_alignRight="@+id/lgnetpassword"
            android:layout_alignEnd="@+id/lgnetpassword"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:id="@+id/lgntvmobile"
            android:layout_above="@+id/lgnetmobile"
            android:layout_alignLeft="@+id/lgnetmobile"
            android:layout_alignStart="@+id/lgnetmobile"
            android:textColor="@color/colorWhite" />

        <TextView
            android:text="@string/_0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="60dp"
            android:id="@+id/lgntvinvisible"
            android:visibility="invisible"
            android:layout_marginBottom="82dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hai_dimenticato_la_password"
            android:id="@+id/lgntvforgot"
            android:onClick="onClickForgot"
            android:textAlignment="center"
            android:layout_above="@+id/lgntvinvisible"
            android:layout_alignRight="@+id/lgntvinvisible"
            android:layout_alignEnd="@+id/lgntvinvisible"
            android:layout_alignLeft="@+id/lgnchkrestaloggato"
            android:layout_alignStart="@+id/lgnchkrestaloggato"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginregister"
            android:id="@+id/lgntvregister"
            android:onClick="onClickCreateAcc"
            android:textAlignment="center"
            android:layout_below="@+id/lgntvforgot"
            android:layout_alignRight="@+id/lgntvinvisible"
            android:layout_alignEnd="@+id/lgntvinvisible"
            android:layout_alignLeft="@+id/lgnchkrestaloggato"
            android:layout_alignStart="@+id/lgnchkrestaloggato"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advsettings"
            android:id="@+id/lgntvsetip"
            android:onClick="onClickAdvSettings"
            android:textAlignment="center"
            android:layout_below="@+id/lgntvregister"
            android:layout_alignRight="@+id/lgntvinvisible"
            android:layout_alignEnd="@+id/lgntvinvisible"
            android:layout_alignLeft="@+id/lgnchkrestaloggato"
            android:layout_alignStart="@+id/lgnchkrestaloggato"
            android:textColor="@color/colorWhite"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta_loggato"
            android:id="@+id/lgnchkrestaloggato"
            android:checked="true"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/colorWhite"
            android:layout_above="@+id/lgnbtnlogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</ScrollView>
